# htr-essays

./: .gitignore  README.md  data_splits.json  predictions.json  pyproject.toml  verify_setup.py
evaluation_results/: test_metrics.json  test_predictions.json
scripts/: evaluate.sh  infer.sh  preview_dataset_samples.py  run_segmentation_debug.py  train.sh
src/htr_essays/data/: dataset.py  preprocessing.py
src/htr_essays/evaluation/: evaluate.py  metrics.py
src/htr_essays/inference/: infer.py  predictor.py  segment.py
src/htr_essays/models/: config.py  trocr_model.py
src/htr_essays/training/: train.py  trainer.py
tests/: test_dataset.py  test_metrics.py
